# ict-bank

./: .env  Dockerfile.api  Dockerfile.streamlit  README.md  app.py  main.py  pyproject.toml  requirement.txt
